# docs/oas/openapi.json
@@ -567,277 +567,6 @@
         }
       }
     },
-    "/executions": {
-      "get": {
-        "tags": [
-          "execution"
-        ],
-        "summary": "Fetch all executions",
-        "operationId": "fetch_all_executions",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/ExecutionRunResponse"
-                  },
-                  "type": "array",
-                  "title": "Response Fetch All Executions"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/executions/{execution_id}/experiments": {
-      "get": {
-        "tags": [
-          "execution"
-        ],
-        "summary": "Fetch an execution by its ID",
-        "operationId": "fetch_experiments_by_id",
-        "parameters": [
-          {
-            "name": "execution_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Execution Id"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ExecutionResponse"
-                  },
-                  "title": "Response Fetch Experiments By Id"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/executions/{execution_id}/tags": {
-      "post": {
-        "tags": [
-          "execution"
-        ],
-        "summary": "Add tags to an execution",
-        "operationId": "add_execution_tags",
-        "parameters": [
-          {
-            "name": "execution_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Execution Id"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "string"
-                },
-                "title": "Tags"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "execution"
-        ],
-        "summary": "Remove tags from an execution",
-        "operationId": "remove_execution_tags",
-        "parameters": [
-          {
-            "name": "execution_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Execution Id"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "string"
-                },
-                "title": "Tags"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/executions/experiments": {
-      "get": {
-        "tags": [
-          "execution"
-        ],
-        "summary": "Fetch all executions",
-        "operationId": "fetch_all_executions_experiments",
-        "parameters": [
-          {
-            "name": "label[]",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Label[]"
-            }
-          },
-          {
-            "name": "experiment_name[]",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Experiment Name[]"
-            }
-          },
-          {
-            "name": "execution_id[]",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Execution Id[]"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ExecutionResponse"
-                  },
-                  "title": "Response Fetch All Executions Experiments"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/executions/figure": {
       "get": {
         "tags": [
@@ -897,31 +626,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ExecutionLockStatusResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/experiments": {
-      "get": {
-        "tags": [
-          "experiment"
-        ],
-        "summary": "Fetch all experiments",
-        "operationId": "fetch_all_experiment",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/ExperimentResponse"
-                  },
-                  "type": "array",
-                  "title": "Response Fetch All Experiment"
                 }
               }
             }
@@ -1877,73 +1581,6 @@
         ],
         "title": "ExecutionLockStatusResponse"
       },
-      "ExecutionResponse": {
-        "properties": {
-          "experiment_name": {
-            "type": "string",
-            "title": "Experiment Name"
-          },
-          "label": {
-            "type": "string",
-            "title": "Label"
-          },
-          "status": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Status"
-          },
-          "timestamp": {
-            "type": "string",
-            "title": "Timestamp"
-          },
-          "input_parameter": {
-            "anyOf": [
-              {
-                "type": "object"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Input Parameter"
-          },
-          "output_parameter": {
-            "anyOf": [
-              {
-                "type": "object"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Output Parameter"
-          },
-          "fig_path": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Fig Path"
-          }
-        },
-        "type": "object",
-        "required": [
-          "experiment_name",
-          "label",
-          "timestamp"
-        ],
-        "title": "ExecutionResponse"
-      },
       "ExecutionResponseDetail": {
         "properties": {
           "name": {
@@ -2042,110 +1679,6 @@
         ],
         "title": "ExecutionResponseSummary",
         "description": "ExecutionResponseSummaryV2 is a Pydantic model that represents the summary of an execution response.\n\nAttributes\n----------\n    name (str): The name of the execution.\n    status (str): The current status of the execution.\n    start_at (str): The start time of the execution.\n    end_at (str): The end time of the execution.\n    elapsed_time (str): The total elapsed time of the execution."
-      },
-      "ExecutionRunResponse": {
-        "properties": {
-          "timestamp": {
-            "type": "string",
-            "title": "Timestamp"
-          },
-          "date": {
-            "type": "string",
-            "title": "Date"
-          },
-          "status": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Status"
-          },
-          "execution_id": {
-            "type": "string",
-            "title": "Execution Id"
-          },
-          "menu": {
-            "type": "object",
-            "title": "Menu"
-          },
-          "tags": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Tags"
-          },
-          "qpu_name": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Qpu Name"
-          },
-          "fridge_temperature": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Fridge Temperature"
-          },
-          "flow_url": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Flow Url"
-          }
-        },
-        "type": "object",
-        "required": [
-          "timestamp",
-          "date",
-          "execution_id",
-          "menu"
-        ],
-        "title": "ExecutionRunResponse"
-      },
-      "ExperimentResponse": {
-        "properties": {
-          "experiment_name": {
-            "type": "string",
-            "title": "Experiment Name"
-          },
-          "updated_at": {
-            "type": "string",
-            "title": "Updated At"
-          }
-        },
-        "type": "object",
-        "required": [
-          "experiment_name",
-          "updated_at"
-        ],
-        "title": "ExperimentResponse"
       },
       "GetMenuResponse": {
         "properties": {
