# src/qdash/api/main.py
@@ -6,13 +6,11 @@ from fastapi import FastAPI
 from fastapi.middleware.cors import CORSMiddleware
 from fastapi.routing import APIRoute
 from pymongo import MongoClient
-
 from qdash.api.routers import (
     auth,
     calibration,
     chip,
     execution,
-    experiment,
     file,
     fridges,
     menu,
@@ -20,24 +18,7 @@ from qdash.api.routers import (
     task,
 )
 from qdash.dbmodel.bluefors import BlueforsModel
-from qdash.dbmodel.cooling_down import CoolingDownModel
 from qdash.dbmodel.execution_lock import ExecutionLockModel
-from qdash.dbmodel.execution_run_history import ExecutionRunHistoryModel
-from qdash.dbmodel.experiment import ExperimentModel
-from qdash.dbmodel.experiment_history import ExperimentHistoryModel
-from qdash.dbmodel.instrument import InstrumentModel
-from qdash.dbmodel.menu import MenuModel
-from qdash.dbmodel.one_qubit_calib import OneQubitCalibModel
-from qdash.dbmodel.one_qubit_calib_all_history import OneQubitCalibAllHistoryModel
-from qdash.dbmodel.one_qubit_calib_daily_summary import OneQubitCalibDailySummaryModel
-from qdash.dbmodel.one_qubit_calib_history import OneQubitCalibHistoryModel
-from qdash.dbmodel.qpu import QPUModel
-from qdash.dbmodel.qube import QubeModel
-from qdash.dbmodel.session_info import SessionInfoModel
-from qdash.dbmodel.two_qubit_calib import TwoQubitCalibModel
-from qdash.dbmodel.two_qubit_calib_daily_summary import TwoQubitCalibDailySummaryModel
-from qdash.dbmodel.two_qubit_calib_history import TwoQubitCalibHistoryModel
-from qdash.dbmodel.wiring_info import WiringInfoModel
 
 
 def custom_generate_unique_id(route: APIRoute):
@@ -53,26 +34,8 @@ async def lifespan(app: FastAPI):
     init_bunnet(
         database=client.cloud,
         document_models=[
-            OneQubitCalibModel,
-            TwoQubitCalibModel,
-            OneQubitCalibHistoryModel,
-            TwoQubitCalibHistoryModel,
-            OneQubitCalibDailySummaryModel,
-            TwoQubitCalibDailySummaryModel,
-            MenuModel,
-            QubeModel,
-            QPUModel,
-            SessionInfoModel,
-            WiringInfoModel,
-            CoolingDownModel,
-            InstrumentModel,
             BlueforsModel,
             ExecutionLockModel,
-            ExperimentHistoryModel,
-            ExperimentModel,
-            ExecutionRunHistoryModel,
-            OneQubitCalibAllHistoryModel,
-            CoolingDownModel,
         ],  # type: ignore
     )
     yield
@@ -141,7 +104,6 @@ app.include_router(menu.router, tags=["menu"])
 app.include_router(settings.router, tags=["settings"])
 app.include_router(fridges.router, tags=["fridges"])
 app.include_router(execution.router, tags=["execution"])
-app.include_router(experiment.router, tags=["experiment"])
 app.include_router(chip.router, tags=["chip"])
 app.include_router(file.router, tags=["file"])
 app.include_router(auth.router, tags=["auth", "authentication"])
